@@ -24,6 +24,7 @@ resources 'homepage' => 'https://github.com/michal-josef-spacek/Toolforge-MixNMa
 resources 'repository' => 'git://github.com/michal-josef-spacek/Toolforge-MixNMatch-Print';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
+test_requires 'Toolforge::MixNMatch::Object' => 0;
 tests_recursive;
 version '0.02';
 
