@@ -1,4 +1,5 @@
 0.02
+ - Add basic tests.
  - Improve printing of Catalog to way, that no printing of users and
    month/year if doesnt' exist.
 
